Refactored the project structure to work with coffeescript.  At this point the project should build fine when we run the build

--- a/app/index.html
+++ b/app/index.html
@@ -15,9 +15,8 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/signin.css">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <!-- endbuild -->
-
     <link href="styles/includes/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <!-- endbuild -->
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/chosen/1.0/chosen.css">
 
@@ -188,13 +187,13 @@
 
 <script src="bower_components/jquery/jquery.js"></script>
 
-<!-- ref:js //ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular.min.js-->
+<!-- ref:js //ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.min.js-->
 <script src="bower_components/angular/angular.js"></script>
 <!-- endref -->
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/chosen/1.0/chosen.jquery.min.js"></script>
 
-<!-- ref:js /dpd.js -->
+<!-- ref:js //rokuman.aws.af.cm/dpd.js-->
 <script src="http://rokuman.aws.af.cm/dpd.js"></script>
 <!--<script src="http://localhost/dpd.js"></script>-->
 <!-- endref -->
@@ -226,10 +225,10 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/controllers/login.js"></script>
+
 <script src="scripts/controllers/videos/videos.js"></script>
 <script src="scripts/controllers/videos/adminEdit.js"></script>
 <script src="scripts/controllers/videos/adminNew.js"></script>
-
 
 <script src="scripts/controllers/chanels/chanels.js"></script>
 <script src="scripts/controllers/chanels/adminEdit.js"></script>
