--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
         </button>
 
         <a class="navbar-brand" href="/"> <!--<img src="images/logo.png" alt="Your Logo">-->
-        <b>RokuMan</b>
+        <b>MediaStream</b>
         </a>
 
         <div class="nav-collapse collapse navbar-responsive-collapse">
