Added the Sign up service , controller as well as a dummy sign up page for now.

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
         </button>
 
         <a class="navbar-brand" href="/"> <!--<img src="images/logo.png" alt="Your Logo">-->
-            <b>ROKUMAN 0.1</b>
+            <b>ROKUMAN</b>
         </a>
 
         <div class="nav-collapse collapse navbar-responsive-collapse">
